Hanna Korlarek bio filled out

--- a/Bios/Kotlarek.html
+++ b/Bios/Kotlarek.html
@@ -59,6 +59,65 @@
           <div class="sidebyside">
             <h1 class="no-top-padding bold-h1">Hanna Kotlarek</h1>
 
+            <h1 class="no-top-padding">Focus</h1>
+            <ul>
+              <li>Branding, sports design </li>
+            </ul>
+
+            <h1 class="no-top-padding no-bot-padding">Connect</h1>
+            <ul>
+              <li><a href="https://hkotlarek.myportfolio.com" target="_blank" class="green-link">https://hkotlarek.myportfolio.com</a></li>
+              <li><a href="https://www.instagram.com/hannakotlarek/" target="_blank" class="green-link">Instagram: @hannakotlarek</a></li>
+              <li><a href="https://twitter.com/hannakotlarek" target="_blank" class="green-link">Twitter: @hannakotlarek</a></li>
+            </ul>
+
+            <h1 class="no-top-padding">About Me</h1>
+            <ul>
+              <li>My name is Hanna Kotlarek and I am a senior VCD students who has a passion for branding and sports design. I am an outgoing blond who shops way too much. I am currently a varsity cheerleader for Kent State and the graphic designer for Kent State Football. </li> <br>
+
+              <li><b>Senior quote:</b><br>
+              "Normality is a paved road: Its's comfortable to walk, but no flowers grow"</li> <br>
+
+              <li><b>Why did you choose VCD?</b><br>
+              I have always had a passion to make things look attractive and presentable, and design allows me to do that. </li> <br>
+
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              As a young girl I was always drawn to things that looked pleasing to the eye. This was the case with packaging, book covers, clothing design, and posters. </li><br>
+
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Undo (command+Z)</li><br>
+
+              <li><b>Worst VCD moment:</b><br>
+              Accidentally forgetting half of my project freshmen year for intro to VCD. </li><br>
+
+              <li><b>Best VCD moment:</b><br>
+              Getting accepted to the BFA program during sophomore review. </li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              The friends, family and environment around me. </li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              Work for a power 5, or professional sports team doing branding or graphic design. </li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Mathematician</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Negativity </li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Barbie Dreams - Nicki Minaj </li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Confessions of a Shopaholic or Rebel Without a Cause</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              I don't believe in luck. Everything happens for a reason. </li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              "You look happy"</li><br>
+            </ul>
+
 
           </div>
         </div>
