Brian updated portfolio link

--- a/Bios/Tran.html
+++ b/Bios/Tran.html
@@ -66,7 +66,7 @@
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="http://briantran.myportfolio.com" target="_blank" class="green-link">http://briantran.myportfolio.com</a></li>
+              <li><a href="http://brian-tran.com" target="_blank" class="green-link">http://brian-tran.com</a></li>
               <li><a href="https://www.instagram.com/brian_tran.gif/" target="_blank" class="green-link">Instagram: @brian_tran.gif</a></li>
             </ul>
 
