Add portfolio link for Freesia

--- a/Bios/Yoon.html
+++ b/Bios/Yoon.html
@@ -66,6 +66,7 @@
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
+              <li><a href="https://freesiayoon.com/" target="_blank" class="green-link">https://freesiayoon.com/</a></li>
               <li><a href="https://www.instagram.com/SoleilDrop/" target="_blank" class="green-link">Instagram: @SoleilDrop</a></li>
               <li><a href="https://twitter.com/SoleilDrop" target="_blank" class="green-link">Twitter: @SoleilDrop</a></li>
             </ul>
